--- a/gb/news2008_5.md
+++ b/gb/news2008_5.md
@@ -1,4 +1,16 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qgedzr297/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san9658.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san9658.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san9658.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san9658.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san9658.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san9658.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>生活消费</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/qgedzr297/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qgedzr297/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/31/n11757143.md#1" target="_blank">科技男被老婆笑肉脚 原来是心肌梗塞逾90%</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/31/n11757143.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/406e0e56b04887ce7c19fadcca749fc5-150x120.jpg" align ="left"></a>48岁林俊吉先生任职于翔生资讯公司(隶属秀传医疗体系)，因工作关系长期久坐缺乏运动，之前服务的公司又应酬多、作息不正常，加上高血压、糖尿病病史，最近常有恶心、手麻、背痛、呼吸不顺、额头冒冷汗等症状，同事建议他要进一步做检查，刚好彰化秀传医院引进最新的“宝石全景电脑断层”，检查结果发现左前降支血管几乎完全阻塞，紧急安排心.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 4:22 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/20/n11734737.md#1" target="_blank">不用再依赖咖啡和糖 9种精油迅速提神消疲劳</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/20/n11734737.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/refreshing-lemon-essential-oil_779727637-150x120.jpg" align ="left"></a>疲劳、精神不济是现代人面临的最大问题，长期依赖糖和咖啡因饮品，只会让压力和疲惫感恶化。用天然的精油来恢复活力，并彻底从营养补充、运动和自我照顾等方面改变生活方式，彻底摆脱日复一日的疲劳。以下9种精油，特别适合提神和消除疲劳。一、柑橘类精油：柠檬精油、甜橙精油等。二、其他精油： 尤加利精油、乳香精油、欧薄荷精油......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 2:30 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/24/n11742081.md#1" target="_blank">“睡眠救赎” 凭什么你可以睡觉？</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/24/n11742081.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/07/1507280537241664-150x120.jpg" align ="left"></a>“睡眠救赎”是缺氧研究中心主持人陈志明博士，对睡眠、失眠、以及做梦等等未知的生理现象所研究的独特全新发现、定义及理论的著作。主要是说明“缺氧”这个核心因子，导致的所有睡眠生理现象，包含缺氧所导致的“缺氧型失眠”或“缺氧型睡眠障碍”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 1:47 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/31/n11756481.md#1" target="_blank">避免毛衣起球 专家技巧让你一次就上手</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/31/n11756481.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/shutterstock_1173240742-150x120.jpg" align ="left"></a>在冷天里，穿上一件美丽的毛衣，让人格外感觉温暖安心。然而，在缺乏细心保养下，大多数毛衣都很容易脱线或起毛球。以下，我们将说明毛球为何产生？平时要如何预防？有了毛球又该怎么处理？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 1:32 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/31/n11756810.md#1" target="_blank">两只胖海狮跳上小船玩耍 差点沉船</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/31/n11756810.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-180337385-150x120.jpg" align ="left"></a>美国华盛顿州日前上演有趣的一幕：两只体型庞大的海狮跳上一艘小船玩耍，看起来很享受的样子，但它们可能不知道自己沉重的身体让小船倾斜一边，几乎要沉船了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 1:25 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/27/n11748796.md#1" target="_blank">寻找好玩的元素 增加孩子登山健行乐趣</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/27/n11748796.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/20191228_sally_play_01-150x120.jpg" align ="left"></a>登山健行，对孩子来说，最重要的就是一条有趣好玩的路线，可以让他们在活动中找到欢乐；而一条景色优美的路线，是让父母享受旅程的重要元素，也可让成人放松平时工作紧绷的神经；一条充满冒险的路线，可以让全家人经历千辛万苦后，一起享有达成目标的成就感。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 11:09 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/30/n11756258.md#1" target="_blank">卧床不动易长褥疮 中医如何治疗？4方法预防</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/30/n11756258.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/bed-sore3_572190847-150x120.jpg" align ="left"></a>褥疮，又称压疮、压力性溃疡，往往是因为年长者或病人长期卧床、坐轮椅，无法改变姿势，所以身体的骨头突起处持续受到压迫、摩擦等而出现皮肤病变。最常长褥疮的地方包括尾椎、臀部、肩背部等。中医称褥疮为“席疮”。如何用中药和外敷方法治疗褥疮？如何预防皮肤长出褥疮？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 6:41 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/30/n11756229.md#1" target="_blank">胃不舒服，可能是肝病？如何判断</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/30/n11756229.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/shutterstock_794065012-150x120.jpg" align ="left"></a>临床上，有些人出现消化道方面的症状，如恶心、胃痛、食欲不振等，怀疑是胃有毛病，吃了胃药后却不见效果，到医院进一步检查，结果发现是肝脏出了问题。肝病为何引发胃部不适？出现胃部不适是得了肝病还是胃病？家医科医师林旭华提供初步判断方法......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 4:11 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/30/n11755050.md#1" target="_blank">2019东湾房市11月份最新数据（下）</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/30/n11755050.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/concord2-150x120.png" align ="left"></a>文：李欧?大纪元
+旧金山湾区，东湾十一月房市因进入淡季，销售量几乎全面下滑，但在价格方面较上个月有涨幅的城市超过一半，与湾区其它城市大致相同。
+
+以本次刊登的东湾城市来看，纽华克（Newark）、都柏林（Dublin）、康科德（Concord）、拉法叶（Lafayette）、核桃溪（Walnut Creek）等市.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 11:15 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/30/n11755222.md#1" target="_blank">都会男女会客室：前妻改嫁，还需再连络？</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/30/n11755222.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/1003190818232175-150x120.jpg" align ="left"></a>理解前妻所为背后的善意，并诚心祝福她重新过自己的生活，当您真正愿意释怀，新的缘分或许会悄然降临喔！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 8:20 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/28/n11751570.md#1" target="_blank">2020年的8大饮食趋势 让你越吃越健康</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/28/n11751570.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/fruit-vegetable_1377847055-150x120.jpg" align ="left"></a>随着新式营养学的普及，人们越来越重视饮食与健康的关系。在新的一年里，对于健康的追求，正让饮食突破国界与文化的藩篱，人们也纷纷从古老的饮食智慧中，寻找全新的启发。下面，我们提出的2020年8大饮食趋势。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 7:53 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/29/n11753548.md#1" target="_blank">冬季房市低迷吗？旧金山高端康斗照卖不误</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/29/n11753548.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/05Residences-Penthouse_Collection-Carousel-03-150x120.jpg" align ="left"></a>文：李欧?大纪元
@@ -34,15 +46,6 @@
 首先在汽车的外型设计，房车设计更为运动化，Maxima的轿跑化伸延到Altima，流线而低矮的车身，犹如一辆跑车，却拥有四个车门，再配上四个巨大车.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 1:59 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/28/n11750582.md#1" target="_blank">宠物能丰富生活 适合孩子饲养的8种动物</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/28/n11750582.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/shutterstock_689876338-150x120.jpg" align ="left"></a>让孩童饲养宠物有许多好处，照顾动物的同时，孩子也能学到生物知识和照顾技巧。研究也指出，家中有饲养宠物的孩子，免疫力比没有饲养宠物的孩子好。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 12:50 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/27/n11749701.md#1" target="_blank">【四维健康】医师析高以翔猝死原因  4方法预防运动猝死</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/27/n11749701.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/sport-sudden-cardiac-death1--150x120.jpg" align ="left"></a>激烈运动确有可能造成猝死，怎样才能避免悲剧发生？艺人高以翔在录制高强度竞技运动节目中不幸猝死，经诊断是“心源性猝死”。运动时发生猝死有三大原因，比如人在长期运动、劳动下，没有充分补充电解质，造成心律失常。那么若要参加剧烈运动项目，怎样能防止猝死发生？在做剧烈运动前，要做准备和训练。长期不做大负荷运动，突然做......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 4:15 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/25/n11745370.md#1" target="_blank">组图：2019世界各地欢庆圣诞节</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/25/n11745370.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Christmas-150x120.jpg" align ="left"></a>每年圣诞节前夕，世界各地都会举办活动，为圣诞节的到来暖场，其中也有许多活动需要扮装。今日挑选来自法新社与GETTY的精选图片，与大家分享各地的人们都是怎么同乐的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 11:09 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/26/n11746968.md#1" target="_blank">动物收容所让流浪狗挑礼物 狗狗神情融化人心</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/26/n11746968.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/52e05eb67cf48e134fa55dde6cfe75a7-150x120.jpg" align ="left"></a>圣誔节是个欢乐的日子，动物庇护所收留很多只曾经被遗弃的流浪狗，他们认为住在那里的狗狗也一样要得到一份圣誔节礼物；挑选礼物的时间到了，从视频中可以从狗狗们快乐的神情中看到另一种融化人心的圣誔气息！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 7:28 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/26/n11747071.md#1" target="_blank">记得出生后的每一刻 澳洲女出书分享超强记忆力</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/26/n11747071.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1e5aa34c37c3f4184d9127e6776eab22-150x120.jpg" align ="left"></a>我们大都希望自己记忆力好一点，不过一位澳洲女子倒希望自己能忘事。29岁的夏洛克记得从出生到现在身边发生过的每一件事情和细节。她日前出书，写下了自己的超记忆；来看看似乎是令人称羡的超记忆，为何变成夏洛克无法摆脱的魔咒呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 7:18 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/25/n11745018.md#1" target="_blank">逃脱专家 聪明狗“用舌头解开门锁” 只花了8秒</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/25/n11745018.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/17c6214c0ac749edb0638df04ee7813b-150x120.jpg" align ="left"></a>为了不喜欢被限制行动，聪明竉物们各显有趣的奇招；目前被饲养在美国科罗拉多州的一家兽医院里面的一只狗狗可是个逃脱专家，它用自己独门利器—“舌头”解开门锁，前后只花了8秒钟。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 7:12 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/25/n11745079.md#1" target="_blank">5岁女孩人小志不小 义卖替123同学付午餐费</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/25/n11745079.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/d2e5569cc038ecdcfa3aa3c71fea06a5-150x120.png" align ="left"></a>一个5岁的女孩做了最甜蜜的事，她帮助付不出钱的同学还清午餐债务。她摆摊义卖自己手工做的饼乾和热巧克力，募集80美元，用这笔钱偿还了123名学生的学校午餐债务。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 7:03 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/26/n11747694.md#1" target="_blank">古代中医有好用的“安眠药” 助眠又养生</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/26/n11747694.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/insomnia-chinese-medicine-1226-150x120.jpg" align ="left"></a>失眠的人们，往往求助于西医的安眠药。其实在中国古代，就有非常好用的“安眠药”。中医看失眠原因是“阳不入阴” 有三种情况。古人也会失眠，他们使用的“安眠药方”有哪些？这些方子又适合什么样的人吃？1. 半夏秫米汤——最早的安眠药。2. 黄连阿胶汤——对抗生病造成的失眠。3. 天王补心丹——对抗耗脑、忧思过度失眠。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 3:18 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/27/n11748440.md#1" target="_blank">沉迷于深夜线上购物  或成另一种睡眠障碍</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/27/n11748440.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/shutterstock_512452012-150x120.jpg" align ="left"></a>调查发现，深夜徘徊在线上商店的人比想像中更多，这俨然已成为一种全新的睡眠障碍。并且，购物者不分男女老少，就连婴儿潮世代的长者，也有高达58％的人会在深夜购物。更有31％的人曾忘记在睡前买了什么？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 2:35 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/27/n11748489.md#1" target="_blank">从401k退休金账户借款好吗？专家：弊多于利</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/27/n11748489.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/01/1201200555201012-150x120.jpg" align ="left"></a>随着现代社会人类寿命的延长，我们会越来越依靠延迟退休年龄或者多储备退休金来度过老年生活。那么在最能挣钱的黄金年龄，用养老金来偿还贷款或满足消费需求，实在是一种不明智的选择。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 1:48 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/27/n11748138.md#1" target="_blank">来自大海的美味 贝类安全料理指南</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/27/n11748138.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Fotolia_42951300_Subscription_L-150x120.jpg" align ="left"></a>贝类的饱和脂肪含量低，却富含omega-3脂肪酸，与陆地上难以取得的矿物质，是值得每周吃一次的“海味”。然而，近年来贝类食物中毒案件暴增，让许多人对贝类望之却步。其实，只要在购买、储存、烹调时，注意一些安全原则，贝类仍可以是人们健康饮食的一部分。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 12:50 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/27/n11748297.md#1" target="_blank">搭机旅行 视频教你机场生存五妙招</a><br></h3>随着安检严格，以及越来越多人旅游，乘客一般会选择尽早感到机场，有时候在机场花的时间很长。在闹哄哄的机场等候，很容易产生不耐烦和焦虑情绪。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 7:34 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/28/n11751661.md#1" target="_blank">酒后汽车不让开</a><br></h3>仅在美国，每天就有30人在与酒后驾驶相关的交通事故中丧生。这相当于每48分钟就有一个人死于酒驾相关的事故。但问题是，现实中其实已经存在简单的技术可以防止，甚至可能杜绝酒后驾驶的。那么为什么汽车制造商不在新车上配置这种技术呢？
 
